# lisenare

./: .gitignore  README.md  cefr_classification.py  cluster_test.py  create_db_and_insert_readings.py  database.db  dqn_test.ipynb  dqn_test.py  historical_data.pkl  kmean_elbow.py  lird_eval.py  lird_inference.py  lird_preprocess.py  lird_simulator_lab.py  lird_train.py  lird_train_reward_model.py  main.py  main_temp.py  pca_optimal_dim.py  pyproject.toml  quick_test.py  read_rec_eval_compare.py  reading_env.py  reading_env_eval.py  reading_env_eval_continuous.py  reading_env_test.py  reading_env_train.py  reading_env_train_continuous.py  reading_rec_env.py  reading_rec_env_test.py  refresh_embeddings.py  reward_model_best.pth  seed_data.py  test_embedding.py  test_service.py  test_syntax.py
ai_models/cefr_classifier/: process_vocab_lists.py  reading_level_classifier.py
ai_models/cefr_classifier/processed_vocab/: A1.txt  A2.txt  B1.txt  B2.txt  C1.txt
app/: config.py  database.py  main.py  models.py  schemas.py  security.py
app/api/: auth.py  interactions.py  readings.py  recommendations.py  study_sessions.py  topics.py  users.py
app/core/: security.py
app/services/: auth.py  interactions.py  item_embeddings.py  readings.py  recommendation_states.py  study_sessions.py  topics.py  user_states.py  users.py
core/: database.py  models.py
rec_rl/: lird_train.py
static_data/: All_Passages_Questions.xlsx  QA_Race.xlsx  ResultCambridge_with_topic.xlsx
training_output/: ppo_eval_rewards.npy
training_output_continuous/: ppo_eval_rewards_continuous.npy
(+17 files in other folders)
