[project]
name = "lisenare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.120.1",
    "jupyter>=1.1.1",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "sqlmodel>=0.0.27",
    "stable-baselines3[extra]>=2.7.0",
]
